--- a/8821cu.conf
+++ b/8821cu.conf
@@ -3,7 +3,7 @@
 # Purpose: Allow easy access to specific driver options.
 #
 # Edit the following line to change, add or delete options:
-options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgnt=1 rtw_beamform_cap=0 rtw_dfs_region_domain=0
+options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgnt=1 rtw_dfs_region_domain=0
 #
 # After editing is complete, save this file (if using nano: Ctrl + x, y, Enter)
 # and reboot to activate the changes.
@@ -57,17 +57,6 @@ options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgn
 # 0 = Disable power saving
 # 1 = Power saving on, minPS (default)
 # 2 = Power saving on, maxPS (not recommended for AP mode)
-#
-# -----
-#
-# Beamforming options ( rtw_beamform_cap )
-#
-# 0 = Disable (default)
-# 1 = SU Beamformer
-# 2 = SU Beamformee
-# 10= SU Beamformee and MU Beamformee
-#
-# Note: MU Beamformer is not supported.
 #
 # -----
 #
@@ -125,7 +114,7 @@ options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgn
 # Note: The best settings can vary but the following may be a good place to start.
 #
 # /etc/modprobe.d/8821cu.conf
-# options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=0 rtw_vht_enable=2 rtw_power_mgnt=1 rtw_beamform_cap=0 rtw_dfs_region_domain=1
+# options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=0 rtw_vht_enable=2 rtw_power_mgnt=1 rtw_dfs_region_domain=1
 #
 # Note: The best setting for `rtw_dfs_region_domain=` will depend on your location.
 #
