add rtw_RFE_type module parameter

--- a/8821cu.conf
+++ b/8821cu.conf
@@ -3,7 +3,7 @@
 # Purpose: Allow easy access to specific driver options.
 #
 # Edit the following line to change, add or delete options:
-options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgnt=1 rtw_dfs_region_domain=0
+options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgnt=1 rtw_dfs_region_domain=0 rtw_RFE_type=64
 #
 # After editing is complete, save this file (if using nano: Ctrl + x, y, Enter)
 # and reboot to activate the changes.
@@ -95,6 +95,26 @@ options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgn
 #
 # 0 = Sets interface 0 to be p2p interface
 # 1 = Sets interface 1 to be p2p interface (default) 
+#
+# -----
+#
+# Select RFE type ( rtw_RFE_type )
+#
+# 0 = (2-Ant, DPDT), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 1 = (1-Ant, SPDT@Ant1), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 2 = (1-Ant, SPDT@Ant1) , (2G_BTG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 3 = (1-Ant, DPDT@Ant2), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 4 = (1-Ant, DPDT@Ant2), (2G_BTG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 5 = (2-Ant), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 6 = (2-Ant), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 7 = (1-Ant), (2G_BTG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
+# 64 = (default)
+#		
+# Note: RFE Type is used to set antenna isolation and the BT coexistence
+# mechanism. Some adapters require this setting and some do not. If wifi
+# does not work without this setting, the setting probably needs to be 
+# set. It may be necessary to try different settings to determine
+# which setting is optimal for your adapter.
 #
 # -----
 #
