change rtw_RFE_type default

--- a/8821cu.conf
+++ b/8821cu.conf
@@ -3,7 +3,7 @@
 # Purpose: Allow easy access to specific driver options.
 #
 # Edit the following line to change, add or delete options:
-options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgnt=1 rtw_dfs_region_domain=0 rtw_RFE_type=64
+options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgnt=1 rtw_dfs_region_domain=0 rtw_RFE_type=7
 #
 # After editing is complete, save this file (if using nano: Ctrl + x, y, Enter)
 # and reboot to activate the changes.
@@ -107,8 +107,8 @@ options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgn
 # 4 = (1-Ant, DPDT@Ant2), (2G_BTG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
 # 5 = (2-Ant), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
 # 6 = (2-Ant), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
-# 7 = (1-Ant), (2G_BTG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
-# 64 = (default)
+# 7 = (1-Ant), (2G_BTG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW) (default)
+# 64 = this appears to be the default on the adapters that do not support bluetooth
 #		
 # Note: RFE Type is used to set antenna isolation and the BT coexistence
 # mechanism. Some adapters require this setting and some do not. If wifi
