change rtw_RFE_type default

--- a/8821cu.conf
+++ b/8821cu.conf
@@ -108,7 +108,7 @@ options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgn
 # 5 = (2-Ant), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
 # 6 = (2-Ant), (2G_WLG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW)
 # 7 = (1-Ant), (2G_BTG, iPA, iLNA, iSW), (5G, iPA, iLNA, iSW) (default)
-# 64 = this appears to be the default on the adapters that do not support bluetooth
+# 64 = this appears to be the default on adapters that do not support bluetooth
 #		
 # Note: RFE Type is used to set antenna isolation and the BT coexistence
 # mechanism. Some adapters require this setting and some do not. If wifi
