--- a/8821cu.conf
+++ b/8821cu.conf
@@ -2,6 +2,11 @@
 #
 # Purpose: Allow easy access to specific driver options.
 #
+# Warning: Some adapters based on the rtl8821cu chipset may require the
+# `rtw_RFE_type` option to be set. If wifi or bluetooth does not work
+# after driver installation, see the appropriate section in the below
+# documentation.
+#
 # Edit the following line to change, add or delete options:
 options 8821cu rtw_drv_log_level=0 rtw_led_ctrl=1 rtw_vht_enable=1 rtw_power_mgnt=1 rtw_dfs_region_domain=0
 #
